force-app/main/default/objects/Part__c/Part__c.object-meta.xml
<CustomObject>
    <description>부품 마스터. SKU·단가·재고를 외부 ERP와 동기화</description>
    <label>Part</label>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>