force-app/main/default/objects/Part__c/fields/Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Last_Synced__c</fullName>
    <description>ERP 마지막 동기화 시각</description>
    <label>Last Synced</label>
    <type>DateTime</type>
</CustomField>