force-app/main/default/objects/Part__c/fields/Reorder_Point__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Point__c</fullName>
    <description>자동 발주 임계값</description>
    <label>Reorder Point</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>