force-app/main/default/objects/Part__c/fields/SKU__c.field-meta.xml
<CustomField>
    <fullName>SKU__c</fullName>
    <description>ERP 매칭 키 (인바운드 재고 동기화 upsert 시 사용)</description>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>