force-app/main/default/objects/Part__c/fields/Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Stock_Quantity__c</fullName>
    <description>현재 재고 수량</description>
    <label>Stock Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>