force-app/main/default/objects/Part__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>보관 창고 위치</description>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North Warehouse</fullName>
            </value>
            <value>
                <fullName>South Warehouse</fullName>
            </value>
            <value>
                <fullName>East Warehouse</fullName>
            </value>
            <value>
                <fullName>West Warehouse</fullName>
            </value>
            <value>
                <fullName>Central Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>