force-app/main/default/objects/Part__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>SKU__c</columns>
    <columns>Warehouse__c</columns>
    <columns>Stock_Quantity__c</columns>
    <columns>Reorder_Point__c</columns>
    <columns>Unit_Price__c</columns>
    <label>All</label>
</ListView>